fix image extension

--- a/scss/external_css/custom.scss
+++ b/scss/external_css/custom.scss
@@ -246,7 +246,7 @@ nav a:focus {
 }
 
 .hero__header_slider .bg-img-3 {
-    background-image: url(../img/slide2.jpg);
+    background-image: url(../img/slide2.JPG);
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -254,7 +254,7 @@ nav a:focus {
 }
 
 .hero__header_slider .bg-img-4 {
-    background-image: url(../img/slide3.jpg);
+    background-image: url(../img/slide3.JPG);
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
