--- a/scss/external_css/custom.scss
+++ b/scss/external_css/custom.scss
@@ -7,6 +7,9 @@
     text-align: center;
     background: rgba(0,0,0,0.2);
     padding: 15px;
+    @media (max-width: 991px){
+        display: none;
+    }
 }
 
 nav a {
