added modal for standard

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,6 +26,8 @@
 @import "components/preloader";
 @import "components/alert";
 @import "components/gallery";
+@import "components/pet-sitting";
+@import "components/about-us";
 
 // PAGES
 @import "pages/_inner.scss";
