--- a/scss/components/_gallery.scss
+++ b/scss/components/_gallery.scss
@@ -92,7 +92,10 @@
 
 .grid-sizer,
 .grid-item {
-    width: 33.333%;
+    width: 25%;
+    @media (max-width: 768px){
+        width: 50%;
+    }
 }
 
 .grid-item {
