--- a/scss/components/_gallery.scss
+++ b/scss/components/_gallery.scss
@@ -1,7 +1,4 @@
 /* ---- button ---- */
-#gallery__block{
-    padding: 50px 0;
-}
 .button {
     display: inline-block;
     padding: 10px 18px;
@@ -94,7 +91,7 @@
 
 .grid-sizer,
 .grid-item {
-    width: 25%;
+    width: 33.3333%;
     @media (max-width: 768px){
         width: 50%;
     }
@@ -102,9 +99,11 @@
 
 .grid-item {
     float: left;
+    overflow: hidden;
 }
 
 .grid-item img {
+    margin: 10px;
     display: block;
     max-width: 100%;
 }
