--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -9,6 +9,10 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
 }
 
+.overflow{
+    overflow: hidden;
+}
+
 main{
     background: url(../img/bg.png);
     background-repeat: no-repeat;
