--- a/scss/components/_gallery.scss
+++ b/scss/components/_gallery.scss
@@ -91,7 +91,8 @@
 
 .grid-sizer,
 .grid-item {
-    width: 33.3333%;
+    width: 32%;
+    margin: 0.6%;
     @media (max-width: 768px){
         width: 50%;
     }
@@ -103,7 +104,7 @@
 }
 
 .grid-item img {
-    margin: 10px;
+    margin: 5px;
     display: block;
     max-width: 100%;
 }
