--- a/scss/components/_gallery.scss
+++ b/scss/components/_gallery.scss
@@ -1,4 +1,3 @@
-/* ---- button ---- */
 .button {
     display: inline-block;
     padding: 10px 18px;
@@ -18,8 +17,6 @@
     @media (max-width: 500px) {
         display: block;
         width: 100%;
-        // border-left: none;
-        // border-right: none;
     }
 }
 
@@ -42,8 +39,6 @@
 .button:active {
     box-shadow: inset 0 1px 10px hsla(0, 0%, 0%, 0.8);
 }
-
-/* ---- button-group ---- */
 
 .button-group {
     text-align: center;
@@ -75,8 +70,6 @@
     }
 }
 
-/* ---- isotope ---- */
-
 .grid {
     transition: 0.3s ease-in-out;
 }
@@ -87,25 +80,29 @@
     clear: both;
 }
 
-/* ---- .grid-item ---- */
-
 .grid-sizer,
 .grid-item {
     width: 32%;
     margin: 0.6%;
     @media (max-width: 768px){
-        width: 50%;
-        margin: 0;
+        &:nth-child(odd){
+            margin-right: 0;
+        }
+        &:nth-child(even){
+            margin-left: 0;
+        }
+        width: 48%;
+        margin: 2%;
     }
 }
 
 .grid-item {
     float: left;
     overflow: hidden;
+    border-radius: 10px;
 }
 
 .grid-item img {
-    margin: 5px;
     display: block;
     max-width: 100%;
 }
