friends section fix

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -13,6 +13,10 @@ body {
     overflow: hidden;
 }
 
+.d-block{
+    display: block;
+}
+
 main{
     background: url(../img/bg.png);
     background-repeat: no-repeat;
