--- a/scss/main.scss
+++ b/scss/main.scss
@@ -25,6 +25,7 @@
 @import "components/social";
 @import "components/preloader";
 @import "components/alert";
+@import "components/friends";
 @import "components/gallery";
 @import "components/pet-sitting";
 @import "components/about-us";
