--- a/scss/main.scss
+++ b/scss/main.scss
@@ -29,6 +29,7 @@
 @import "components/gallery";
 @import "components/pet-sitting";
 @import "components/about-us";
+@import "components/modal";
 
 // PAGES
 @import "pages/_inner.scss";
