--- a/scss/pages/_inner.scss
+++ b/scss/pages/_inner.scss
@@ -163,23 +163,11 @@
         margin-bottom: 25px;
         position: relative;
         font-weight: 700;
-        color: black;
+        color: #353b48;
         font-size: 45px;
     }
-    // .section__heading:after {
-    //     height: 3px;
-    //     content: " ";
-    //     text-shadow: none;
-    //     background-color: #D0BB57;
-    //     width: 200%;
-    //     position: absolute;
-    //     left: -20px;
-    //     top: 40%;
-    //     transform: translate(-100%, 50%);
-    //     overflow: hidden
-    // }
+
     .section__paragraph {
-        //margin-bottom: 50px;
         font-size: 18px;
     }
     h3 {
