fixed contact form

--- a/scss/components/_alert.scss
+++ b/scss/components/_alert.scss
@@ -2,7 +2,7 @@
   position: fixed;
   top: -100px;
   width: 100%;
-  background: #e74c3cde;
+  background: #c23616;
   text-align: center;
   padding:15px;
   -webkit-transition: 0.6s ease-in-out;
