--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -29,15 +29,15 @@
       @include transition_mix;
     }
   }
-  .form__input {
-    width: 100%;
-    background: none;
-    border: none;
-    color: white;
-    margin-bottom: 10px;
-    outline: none;
-    text-align: center;
-  }
+  // .form__input {
+  //   width: 100%;
+  //   background: none;
+  //   border: none;
+  //   color: white;
+  //   margin-bottom: 10px;
+  //   outline: none;
+  //   text-align: center;
+  // }
 }
 
 .button__block {
