--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -2,7 +2,7 @@ $size: 60px;
 $height: 20px;
 $width: 30px;
 $line-size: 3px;
-$line-color: #47C9AF;
+$line-color: #353b48;
 $line-radius: $line-size;
 $to-translate: ($height - $line-size) / 2;
 $bounce: cubic-bezier(.87,-.50,.19,1.50);
