--- a/scss/components/_gallery.scss
+++ b/scss/components/_gallery.scss
@@ -105,6 +105,16 @@
 .grid-item img {
     display: block;
     max-width: 100%;
+    height: 355.19px;
+    @media (max-width: 1199px){
+        height: 300.8px;
+    }
+    @media (max-width: 991px){
+        height: 230.39px;
+    }
+    @media (max-width: 768px){
+        height: auto;
+    }
 }
 
 .d-none{
