--- a/scss/components/_phone-menu.scss
+++ b/scss/components/_phone-menu.scss
@@ -133,7 +133,7 @@
     .menu__items{
         pointer-events: none;
         opacity: 0;
-        border: 1px solid $yellow;
+        border: 1px solid #353b48;
         -webkit-transition: 0.6s ease-in-out;
         -moz-transition: 0.6s ease-in-out;
         -ms-transition: 0.6s ease-in-out;
@@ -143,7 +143,7 @@
             display: block;
             text-align: center;
             a{
-                color: $yellow;
+                color: #353b48;
                 display: block;
                 padding: 20px;
                 font-size: 25px;
