--- a/scss/external_css/custom.scss
+++ b/scss/external_css/custom.scss
@@ -241,7 +241,7 @@ nav a:focus {
 }
 
 .hero__header_slider .bg-img-2 {
-    background-image: url(../img/slide1.jpg);
+    background-image: url(../img/hero.jpg);
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
