--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -16,7 +16,7 @@ body {
 }
 
 main {
-    background: url(../img/bg.png);
+    background: url(../img/bg.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
