fixed extensions of images

--- a/scss/external_css/custom.scss
+++ b/scss/external_css/custom.scss
@@ -256,7 +256,7 @@ nav a:focus {
 }
 
 .hero__header_slider .bg-img-3 {
-    background-image: url(../img/slide3.JPG);
+    background-image: url(../img/slide3.jpg);
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -264,7 +264,7 @@ nav a:focus {
 }
 
 .hero__header_slider .bg-img-4 {
-    background-image: url(../img/slide4.JPG);
+    background-image: url(../img/slide4.jpg);
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
