added button for new litter, fixed closing of modal

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -30,6 +30,7 @@
 @import "components/pet-sitting";
 @import "components/about-us";
 @import "components/modal";
+@import "components/button";
 
 // PAGES
 @import "pages/_inner.scss";
