--- a/scss/components/_gallery.scss
+++ b/scss/components/_gallery.scss
@@ -84,11 +84,11 @@
 .grid-item {
     width: 32%;
     margin: 0.6%;
-    @media (max-width: 768px){
-        &:nth-child(odd){
+    @media (max-width: 768px) {
+        &:nth-child(odd) {
             margin-right: 0;
         }
-        &:nth-child(even){
+        &:nth-child(even) {
             margin-left: 0;
         }
         width: 48%;
@@ -99,24 +99,36 @@
 .grid-item {
     float: left;
     overflow: hidden;
-    border-radius: 10px;
+    img {
+        border-radius: 10px;
+    }
+    .image-caption {
+        position: absolute;
+        bottom: 0;
+        background: rgba(0, 0, 0, 0.8);
+        width: 100%;
+        padding: 10px;
+        color: white;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+    }
 }
 
 .grid-item img {
     display: block;
     max-width: 100%;
     height: 355.19px;
-    @media (max-width: 1199px){
+    @media (max-width: 1199px) {
         height: 300.8px;
     }
-    @media (max-width: 991px){
+    @media (max-width: 991px) {
         height: 230.39px;
     }
-    @media (max-width: 768px){
+    @media (max-width: 768px) {
         height: auto;
     }
 }
 
-.d-none{
+.d-none {
     display: none;
 }
