--- a/scss/components/_friends.scss
+++ b/scss/components/_friends.scss
@@ -1,3 +1,6 @@
+.mb-3 {
+    margin-bottom: 35px;
+}
 .friend__block {
     position: relative;
     cursor: pointer;
@@ -8,7 +11,7 @@
         .overlay {
             opacity: 1;
         }
-        img{
+        img {
             filter: grayscale(0);
         }
     }
