--- a/scss/components/_gallery.scss
+++ b/scss/components/_gallery.scss
@@ -72,6 +72,10 @@
 
 .grid {
     transition: 0.3s ease-in-out;
+    @media (max-width: 768px) {
+        margin-right: 0.5%;
+        margin-left: 0.5%;
+    }
 }
 
 .grid:after {
@@ -85,14 +89,9 @@
     width: 32%;
     margin: 0.6%;
     @media (max-width: 768px) {
-        &:nth-child(odd) {
-            margin-right: 0;
-        }
-        &:nth-child(even) {
-            margin-left: 0;
-        }
+
         width: 48%;
-        margin: 2%;
+        margin: 1%;
     }
 }
 
