--- a/scss/external_css/custom.scss
+++ b/scss/external_css/custom.scss
@@ -228,7 +228,7 @@ nav a:focus {
     .bg-img-0 {
         background-image: url(../img/slide5.jpg);
         @media (min-width: 991px) {
-            background-image: url(../img/slide.jpg);
+            background-image: url(../img/slide0.jpg);
         }
         background-attachment: fixed;
         background-position: center;
