--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,7 +1,6 @@
 /* ----- BASE --------------------------------------------------------------- */
 
 @import url('https://fonts.googleapis.com/css?family=Lato|Source+Sans+Pro');
-
 body {
     -webkit-font-smoothing: antialiased;
     user-select: none;
@@ -25,6 +24,23 @@ main {
     }
 }
 
+.skip-to-main-content {
+    position: absolute;
+    top: -80px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 9999;
+    background: white;
+    padding: 25px;
+    border-radius: 35px;
+    color: black;
+    transition: 1.1s ease-in-out;
+    &:focus{
+        transition: 1.1s ease-in-out;
+        top: 70px;
+    }
+}
+
 h1,
 h2,
 h3,
@@ -37,7 +53,6 @@ h6 {
 
 section {
     padding: 120px 0;
-
     &.bottom__padding {
         padding-bottom: 0;
     }
@@ -48,7 +63,6 @@ ul {
 }
 
 a {
-
     &:hover,
     &:focus,
     &:active {
@@ -61,7 +75,6 @@ a {
 button {
     border: none;
     @include transition(all 0.2s ease-in-out);
-
     &:hover,
     &:focus,
     &:active {
