--- a/scss/main.scss
+++ b/scss/main.scss
@@ -31,6 +31,7 @@
 @import "components/about-us";
 @import "components/modal";
 @import "components/button";
+@import "components/language";
 
 // PAGES
 @import "pages/_inner.scss";
