--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -15,6 +15,12 @@ body {
     display: block;
 }
 
+.d-lg-none{
+    @media (min-width: 991px){
+        display: none;
+    }
+}
+
 main {
     @media (min-width: 991px) {
         background: url(../img/bg.jpg);
@@ -26,7 +32,7 @@ main {
 
 .skip-to-main-content {
     position: absolute;
-    top: -80px;
+    top: -150px;
     left: 50%;
     transform: translateX(-50%);
     z-index: 9999;
@@ -37,7 +43,7 @@ main {
     transition: 1.1s ease-in-out;
     &:focus{
         transition: 1.1s ease-in-out;
-        top: 70px;
+        top: 50px;
     }
 }
 
