--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,6 +32,7 @@
 @import "components/modal";
 @import "components/button";
 @import "components/language";
+@import "components/checkbox";
 
 // PAGES
 @import "pages/_inner.scss";
